--- a/ROXII WEBSITE/css/header.css
+++ b/ROXII WEBSITE/css/header.css
@@ -1,6 +1,6 @@
 
 .marketing-site-hero {
-  background: url("https://www.hatterasyachts.com/media/1502/motor-yachts-header.jpg?width=1903") top right no-repeat;
+  background: url("http://comunidad.iebschool.com/mariajosemarquina/files/2017/05/descarga-min.jpg") top right no-repeat;
   height: 65vh;
   background-size: cover;
   display: -webkit-flex;
