--- a/ROXII WEBSITE/about/css/header.css
+++ b/ROXII WEBSITE/about/css/header.css
@@ -1,5 +1,5 @@
 .marketing-site-hero {
-  background: url("../images/logo.png") top right no-repeat;
+  background: url("http://comunidad.iebschool.com/mariajosemarquina/files/2017/05/descarga-min.jpg") top right no-repeat;
   height: 65vh;
   background-size: cover;
   display: -webkit-flex;
